--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="shortcut icon" href="#">
 </head>
 <body>
+    <header>
+        <div id="header-container">
+            <div id="header-logo" class="header-el"></div>
+            <div id="header-nav" class="header-el"></div>
+        </div>
+    </header>
     <script src="./main.js"></script>
 </body>
 </html>
