--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>TOP - Library</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <div id="header-container">
-            <div id="header-logo" class="header-el"></div>
-            <div id="header-nav" class="header-el"></div>
+            <div id="header-logo" class="header-el">
+                LOGO
+            </div>
+            <div id="header-nav" class="header-el">
+                LOGIN BTN
+            </div>
         </div>
     </header>
+    <button id="newBtn">
+        <span class="material-symbols-outlined">
+        add
+        </span>
+    </button>
     <script src="./main.js"></script>
 </body>
 </html>
