js implementation and styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </div>
         </div>
     </header>
+    <div id="content">
+        
+    </div>
     <button id="newBtn">
         <span class="material-symbols-outlined">
         add
