--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <div id="header-container">
             <div id="header-logo" class="header-el">
-                LOGO
+                <div id="img"></div>
             </div>
             <div id="header-nav" class="header-el">
-                LOGIN BTN
+                <button id="loginBtn">Login</button>
             </div>
         </div>
     </header>
