--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,6 +26,15 @@
     <div id="content">
         
     </div>
+    <footer>
+        <div id="left">
+            <a href="https://github.com/HAP96" target="_blank">HAP96</a>
+        </div>
+        |
+        <div id="right">
+            <a href="https://github.com/HAP96/top-library" target="_blank">Source Code</a>
+        </div>
+    </footer>
     <button id="newBtn">
         <span class="material-symbols-outlined">
         add
